# volumetric-brain-serving

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci_cd_pipeline.yml
scripts/: download_model.py
src/: main.py
src/api/: routes.py  schemas.py
src/core/: logger.py
src/services/: inference_engine.py  medical_transforms.py
